# decorator-agent

./: .dockerignore  .gitignore  README.md  SPEC.md  compose.yaml  index.html  package-lock.json  package.json  tsconfig.node.json
docs/decisions/: ADR-001-server-sqlalchemy-core.md
docs/plans/: 2026-06-28-react-r3f-room-composer.md  2026-06-30-server-owned-model-assets-implementation-plan.md
docs/specs/: 2026-06-28-react-r3f-room-composer-design.md  2026-06-28-react-r3f-room-composer-implementation-plan.md  2026-06-29-glb-compression-tool.md  2026-06-29-python-server-playground-events.md  2026-06-29-server-owned-state-sse-events-implementation-plan.md  2026-06-29-server-owned-state-sse-events.md  2026-06-29-sofa-glb-replacement.md  2026-06-29-wall-mounted-objects-measurements.md  (+2 more)
scripts/: smoke.mjs
server/: .gitignore  Dockerfile  environment.yml  pyproject.toml
server/assets/seeds/models/: sofa-01.glb
server/src/server/: __init__.py  __main__.py  app.py  artifact_store.py  artifacts.py  commands.py  db.py  events.py  executor.py  room_rules.py  schema.py  state.py  store.py
server/src/server/api/: dependencies.py  errors.py  request_body.py
server/src/server/api/routes/: agent.py  artifacts.py  commands.py  events.py  state.py
server/tests/: conftest.py  test_app.py  test_artifacts.py  test_commands.py  test_events.py  test_executor.py  test_room_rules.py  test_state.py  test_store.py
src/: App.tsx  main.js  styles.css
tasks/: plan.md  todo.md
ui/: Dockerfile  asd.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+85 files in other folders)
