[project]
name = "server"
version = "0.1.0"
description = "Placeholder event bridge for the playground."
requires-python = ">=3.13"
dependencies = [
    "SQLAlchemy>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
